test/sema/negative/wrong_condition_type.output
wrong_condition_type.impala:2 col 9: error: expected boolean type (have 'i32') for if condition
